5_Kubernetes and cloud services/kubernetes_3/src/manifest/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: multitool-front
  namespace: app
spec:
  ports:
  - name: multitool-srv
    port: 80
    protocol: TCP
  selector:
    app: fronted

---
apiVersion: v1
kind: Service
metadata:
  name: multitool-back
  namespace: app
spec:
  ports:
  - name: multitool-srv
    port: 80
    protocol: TCP
  selector:
    app: backend

---
apiVersion: v1
kind: Service
metadata:
  name: multitool-cache
  namespace: app
spec:
  ports:
  - name: multitool-srv
    port: 80
    protocol: TCP
  selector:
    app: cache
